# CMake file for BlendInt project
#

add_subdirectory(ClockWidget)
add_subdirectory(Layout)
add_subdirectory(StackedWidget)
add_subdirectory(Timer)
add_subdirectory(Viewport3D)
add_subdirectory(HorizontalLayout)
add_subdirectory(VerticalLayout)
add_subdirectory(StockIcon)
add_subdirectory(PopupWidget)
add_subdirectory(Menu)
add_subdirectory(MenuBin)
add_subdirectory(Widget)
add_subdirectory(Object)
add_subdirectory(ContextManager)
add_subdirectory(Texture2D)
add_subdirectory(TextEntry)
add_subdirectory(Button)
add_subdirectory(Performance)
add_subdirectory(Window)
add_subdirectory(ToggleButton)
add_subdirectory(GLRenderbuffer)
add_subdirectory(AbstractForm)
add_subdirectory(ImageView)
add_subdirectory(TextureFont)
add_subdirectory(Freetype)
add_subdirectory(Label)
