# CMake file for BlendInt project
#

add_subdirectory(ClockWidget)
add_subdirectory(Layout)
add_subdirectory(Stack)
add_subdirectory(Timer)
add_subdirectory(Viewport3D)
add_subdirectory(HorizontalLayout)
add_subdirectory(VerticalLayout)
add_subdirectory(StockIcon)
add_subdirectory(Menu)
add_subdirectory(MenuBin)
add_subdirectory(Widget)
add_subdirectory(Object)
add_subdirectory(Context)
add_subdirectory(Texture2D)
add_subdirectory(TextEntry)
add_subdirectory(Button)
add_subdirectory(Performance)
add_subdirectory(Window)
add_subdirectory(ToggleButton)
add_subdirectory(GLRenderbuffer)
add_subdirectory(AbstractForm)
add_subdirectory(ImageView)
add_subdirectory(TextureFont)
add_subdirectory(Freetype)
add_subdirectory(Label)
add_subdirectory(MenuButton)
add_subdirectory(MenuBar)
add_subdirectory(Frame)
add_subdirectory(ToolBar)
add_subdirectory(ScrollView)
add_subdirectory(ScrollBar)
add_subdirectory(Image)
add_subdirectory(Slider)
add_subdirectory(ScrollArea)
add_subdirectory(Tab)
add_subdirectory(TabButton)
add_subdirectory(ButtonGroup)
add_subdirectory(ComboBox)
add_subdirectory(Splitter)
add_subdirectory(FileBrowser)
add_subdirectory(Theme)
add_subdirectory(Expander)
